# SmartCalc3

./: .gitignore  README.md  README_RUS.md
materials/: topics-list_RUS.md
src/: Makefile  README.md  SmartCalc.spec  main.cc  main.py  mainwindow.py  mainwindow.spec  model.py  presenter.py  pyproject.toml  ui_form.py  view.py
src/lib/: credit_model.cc  credit_model.h  model.cc  model.h
src/qt_view/: View.pyproject  credit.py  credit.ui  credit_ui.py  form.ui  form_ui.py  graphic.py  graphic.ui  graphic_ui.py  ui_credit.py  ui_form.py  ui_graphic.py
src/tests/: test.cc
src/view/: View.pyproject  form.ui  form_ui.py  ui_form.py
